--- a/app/src/main/res/layout/custom_popup_menu.xml
+++ b/app/src/main/res/layout/custom_popup_menu.xml
@@ -189,6 +189,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
+        android:visibility="gone"
         android:background="@color/e0e0e0" />
 
     <!-- Delete All Calls -->
@@ -200,6 +201,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp"
+        android:visibility="gone"
         android:paddingVertical="10dp">
 
         <androidx.appcompat.widget.AppCompatImageView
