--- a/app/src/main/res/layout/activity_permission_info.xml
+++ b/app/src/main/res/layout/activity_permission_info.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     android:padding="24dp">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/txtContinue"
-        android:layout_alignParentTop="true"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:overScrollMode="never">
 
         <LinearLayout
@@ -224,8 +224,6 @@
         android:id="@+id/txtContinue"
         android:layout_width="@dimen/_160sdp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_8sdp"
         android:background="@drawable/edit_text_background"
@@ -239,7 +237,7 @@
         android:textColor="@color/white_og"
         android:textSize="@dimen/_14sdp" />
 
-</RelativeLayout>
+</LinearLayout>
 
 
 
