--- a/app/src/main/res/layout/activity_contact_history_details.xml
+++ b/app/src/main/res/layout/activity_contact_history_details.xml
@@ -8,10 +8,10 @@
     android:orientation="vertical"
     tools:context=".activities.ContactDetailsViewActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/llToolbar"
@@ -69,7 +69,6 @@
                 </LinearLayout>
 
 
-
             </RelativeLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -77,9 +76,9 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:overScrollMode="never"
             android:layout_above="@+id/llBottomMenu"
-            android:layout_below="@+id/llToolbar">
+            android:layout_below="@+id/llToolbar"
+            android:overScrollMode="never">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -139,9 +138,9 @@
                         android:id="@+id/rrRecentCalls"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:orientation="vertical"
                         android:overScrollMode="never"
-                        android:layout_weight="1"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:listitem="@layout/recent_call_history_item" />
 
@@ -284,7 +283,7 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
