--- a/app/src/main/res/layout/contact_item_search.xml
+++ b/app/src/main/res/layout/contact_item_search.xml
@@ -30,15 +30,17 @@
             app:cardCornerRadius="@dimen/_30sdp"
             app:cardElevation="0dp">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                >
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvFirstName2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:fontFamily="@font/poppins_regular"
                     android:gravity="center"
@@ -51,14 +53,13 @@
                     android:id="@+id/ivUserProfile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_user"
                     android:visibility="gone"
                     tools:ignore="ContentDescription" />
-            </RelativeLayout>
+            </LinearLayout>
 
 
         </androidx.cardview.widget.CardView>
