--- a/app/src/main/res/layout/item_onboarding_overlay.xml
+++ b/app/src/main/res/layout/item_onboarding_overlay.xml
@@ -23,6 +23,22 @@
 
     </RelativeLayout>
 
+    <!--<RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgPerson"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_overlay_1"
+            android:visibility="visible" />
+
+    </RelativeLayout>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
