--- a/app/src/main/res/layout/language_layout_item.xml
+++ b/app/src/main/res/layout/language_layout_item.xml
@@ -4,43 +4,40 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        android:paddingVertical="@dimen/_12sdp"
         android:layout_marginTop="@dimen/_6sdp"
-        android:background="@drawable/edit_text_background_new_language">
+        android:background="@drawable/edit_text_background_new_language"
+        android:paddingVertical="@dimen/_12sdp">
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/cbLanguage"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/_12sdp"
+            android:button="@drawable/radio_button_selector"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
-            android:textSize="@dimen/_12sdp"
             android:text=""
-            android:button="@drawable/radio_button_selector"
-            android:layout_centerVertical="true" />
+            android:textSize="@dimen/_12sdp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtLanguage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/cbLanguage"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_7sdp"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
             android:text="Hindi"
-            android:layout_marginStart="@dimen/_7sdp"
-            android:visibility="visible"
             android:textColor="@color/setting_sub_text_color"
-            android:textSize="@dimen/_12sdp" />
+            android:textSize="@dimen/_12sdp"
+            android:visibility="visible" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
